--- a/passwordGenerator03/package.json
+++ b/passwordGenerator03/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.3",
+    "yup": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
